@@ -13,13 +13,13 @@ Build-Depends: debhelper (>= 7),
  libxml2-utils
 Maintainer: Kel Modderman <kel@otaku42.de>
 XS-Python-Version: >=2.5
-Standards-Version: 3.8.3
+Standards-Version: 3.8.4
 
 Package: python-fll
 Architecture: all
 Depends: ${misc:Depends},
  ${python:Depends},
- python-apt,
+ python-apt (>= 0.7.93),
  python-configobj
 Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
