@@ -8,6 +8,7 @@ License:   GPL-2
 """
 
 import apt_pkg
+import apt
 import os
 import sys
 
@@ -24,13 +25,12 @@ if __name__ == '__main__':
         print_error('must specify at least one locale code, eg. fr_FR')
         sys.exit(1)
 
-    apt_pkg.InitConfig()
-    apt_pkg.InitSystem()
+    apt_pkg.init()
 
-    apt_cache = apt_pkg.GetCache(None)
-    installed_packages = dict([(pkg.Name, pkg.CurrentVer.VerStr)
-                               for pkg in apt_cache.Packages
-                               if pkg.CurrentVer])
+    apt_cache = apt_pkg.Cache(apt.progress.base.OpProgress())
+    installed_packages = dict([(pkg.name, pkg.current_ver.ver_str)
+                               for pkg in apt_cache.packages
+                               if pkg.current_ver])
 
     loc_pkg_map_data = 'data/locales-pkg-map'
     if not os.path.isfile(loc_pkg_map_data):
