@@ -1,8 +1,13 @@
 python-fll (0.0.7) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 29 Dec 2009 00:45:21 +0100
+  [ Kel Modderman ]
+  * Bump standards-version to 3.8.4 without any extra changes needed.
+  * Update locales module to new python-apt API.
+
+ -- Kel Modderman <kel@otaku42.de>  Thu, 11 Feb 2010 20:24:19 +1000
 
 python-fll (0.0.6) unstable; urgency=low
 
